[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menus/PlayerWins.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/RoundManager.gd" type="Script" id=2]
[ext_resource path="res://Menus/WinPedestal.png" type="Texture" id=3]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://camera/Camera.tscn" type="PackedScene" id=7]

[node name="RoundManager" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="LevelName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 128.0
margin_right = 144.0
margin_bottom = 142.0
text = "Select Level!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( -216, 0 )
suspended = true

[node name="Player1Selecting" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -248.0
margin_top = 16.0
margin_right = -178.0
margin_bottom = 30.0
text = "Selecting..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Wins" parent="." instance=ExtResource( 1 )]
margin_left = -208.0
margin_top = 88.0
margin_right = -176.0
margin_bottom = 128.0

[node name="Player1Glory" type="Node2D" parent="."]
visible = false
position = Vector2( -216, 24 )

[node name="Sprite" type="Sprite" parent="Player1Glory"]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player1Glory"]
position = Vector2( 0, -16 )
z_index = -5
amount = 16
emission_shape = 2
emission_rect_extents = Vector2( 7, 0.5 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 60.0
angular_velocity_random = 1.0

[node name="Player2" parent="." instance=ExtResource( 6 )]
pause_mode = 1
position = Vector2( 216, 0 )
player_num = 1
suspended = true

[node name="Player2Selecting" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 184.0
margin_top = 16.0
margin_right = 254.0
margin_bottom = 30.0
text = "Selecting..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Wins" parent="." instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 88.0
margin_right = 240.0
margin_bottom = 128.0
rect_scale = Vector2( -1, 1 )

[node name="Player2Glory" type="Node2D" parent="."]
visible = false
position = Vector2( 216, 24 )

[node name="Sprite" type="Sprite" parent="Player2Glory"]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player2Glory"]
position = Vector2( 0, -16 )
z_index = -5
amount = 16
emission_shape = 2
emission_rect_extents = Vector2( 7, 0.5 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 60.0
angular_velocity_random = 1.0

[node name="Camera" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 0 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
player1 = NodePath("../Player")
player2 = NodePath("../Player2")

[node name="Tween" type="Tween" parent="."]
[connection signal="dead" from="Player" to="." method="_on_Player_dead" binds= [ 0 ]]
[connection signal="dead" from="Player2" to="." method="_on_Player_dead" binds= [ 1 ]]
